# GovAIPlatform

./: .dockerignore  .env  .env.example  .gitignore  .gitleaks.toml  .trivyignore  011_add_assistant_and_policy_versions.sql  012_add_mcp_servers_and_grants.sql  013_add_sso_and_federation.sql  014_add_encrypted_runs.sql  015_add_finops_billing.sql  016_add_homologation_fields.sql  017_add_password_and_roles_to_users.sql  018_add_dek_to_encrypted_runs.sql  019_rls_and_immutable_policies.sql  020_expiration_worker_rls_bypass.sql  021_fix_users_rls_for_login.sql  022_grant_encrypted_runs.sql  023_fix_partition_ownership.sql  024_create_platform_admin_role.sql  025_add_telemetry_consent.sql  026_add_audit_compliance_indexes.sql  027_add_key_rotation_tracking.sql  028_create_user_lookup.sql  029_expiration_worker_role_grant.sql  030_extend_audit_action_constraint.sql  031_add_api_key_revocation.sql  032_explicit_vector_dimension.sql  033_create_schema_migrations.sql  034_grant_platform_admin_table_access.sql  035_organizations_rls.sql  036_api_key_lookup_add_expires.sql  037_documents_add_org_id.sql  038_fix_version_publish_flow.sql  039_identity_and_publish_hardening.sql  040_org_sso_lookup.sql  041_runtime_and_release_hardening.sql  042_policy_snapshot_per_execution.sql  043_policy_exceptions.sql  044_evidence_domain.sql  (+89 more)
.claude/: launch.json
.github/: SECRETS.md
admin-ui/: .dockerignore  Dockerfile.admin  dev.sh  next.config.mjs  next.config.ts  package-lock.json  package.json  (+1 more)
sdk/python/: README.md  config.yaml  pyproject.toml
sdk/python/govai_sdk/: __init__.py
(+490 files in other folders)
